# timbits

./: AGENTS.md  Cargo.toml  README.md  install.sh
assets/: emojis.json
scripts/: paste_helper.py
src/: clip.rs  config.rs  daemon.rs  emoji_aliases.rs  emoji_db.rs  emoji_picker.rs  emoji_raster.rs  emoji_update.rs  focus.rs  gnome_hotkeys.rs  history_picker.rs  install.rs  main.rs  ocr.rs  paste.rs  settings.rs  storage.rs  ui_common.rs
