[package]
name = "timbits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
dirs = "6.0.0"
eframe = "0.35.0"
emojis = "0.9.0"
enigo = "0.6.1"
env_logger = "0.11.11"
global-hotkey = "0.8.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
log = "0.4.33"
rusqlite = { version = "0.40.1", features = ["bundled"] }
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
